--- a/frontend/style.css
+++ b/frontend/style.css
@@ -34,6 +34,7 @@ body {
     padding: 22px 44px;
     line-height: 20px;
     background-color: #F9F9F9;
+    cursor: pointer;
 }
 
 .btn5 {
@@ -224,7 +225,7 @@ h5 {
 .FSthirddiv {
     width: 50%;
     margin-left: 85px;
-    margin-top: -2px;
+    margin-top: 7px;
     text-align: left;
     padding-top: 18px;
     display: flex;
